--- a/home_page.html
+++ b/home_page.html
@@ -11,15 +11,17 @@
       href="https://en.wikipedia.org/wiki/Common_kingfisher.png">
   </head>
   <body>
-<div id="object" class="floating"><img src="http://i.imgur.com/N3sm3Zw.png" alt="Placeholder logo" height="28"></div><h1> The Flying Club </h1>
+<div id="object" class="floating"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/%E2%99%82_Common_
+  Kingfisher_%28Alcedo_atthis%29_Photograph_By_Shantanu_Kuveskar%2C_Mangaon%2C_Maharashtra%2C_India.jpg/250px-%E2%99%82_Common_Kingfisher_%28
+  Alcedo_atthis%29_Photograph_By_Shantanu_Kuveskar%2C_Mangaon%2C_Maharashtra%2C_India.jpg" alt="Placeholder logo" height="28"></div><h1> king fisher </h1>
    
 <nav>
      <ul>
        <li><a href="index.html">Home</a></li>
        <li><a href="news_page.html">News</a></li>
-       <li><a href="activity_page.html">Activities</a></li>
-       <li><a href="club_shop_page.html">Club Shop</a></li>
-       <li><a href="sign_up_page.html">Sign up</a></li>
+       <li><a href="activity_page.html">jobs</a></li>
+       <li><a href="club_shop_page.html">companies</a></li>
+       <li><a href="sign_up_page.html">log in</a></li>
      </ul> 
   </nav>
     
@@ -27,19 +29,15 @@
     This is a comment tag. The below information is made up. Read at your own risk.
     -->
   <ul class="reasons">
-    <li class="reasons">You will get to pilot an airplane
-      <ol class="reasons">
-        <li class="reasons">The view is stunning.</li>
-        <li class="reasons">It's exciting!</li>
-        <li class="reasons">There's nothing like your first solo flight.</li>
+    <li class="reasons"> 
+      <ol class="reasons"> 
+        <li class="reasons">   .</li>
       </ol>
     </li>
 
-    <li class="reasons">You will become a better person
-      <ol class="reasons">
-        <li class="reasons">You'll join an elite community</li>
-        <li class="reasons">Flying makes you smarter.</li>
-        <li class="reasons">You will learn more about yourself</li>
+    <li class="reasons">below you can sign up and create 
+      <ol class="reasons">an account so that you just have to sign in 
+        <li class="reasons">and enter hours without having to do it manually </li>  
       </ol>      
     </li>
   </ul>
@@ -89,7 +87,7 @@
   <br />  
    
   <table id="members">
-    <caption>In this table you can see the members of The Flying Club</caption>
+    <caption>In this table you can see</caption>
 
      <thead>
       <tr>
