--- a/home_page.html
+++ b/home_page.html
@@ -72,8 +72,8 @@
         <label for="dob">Date of birth (dd/mm/yyyy):</label>               
         <input type="text" id="dob"><br />
 
-        <label for="skill" id="skilllabel">Flying skill level:</label>                    
-        <input type="range" id="skill" value="0"><br />
+        <label for="hours" id="hoursabel">amount of hours:</label>                    
+        <input type="range" id="hours" value="0"><br />
 
         <label for="reason">Reason for joining:</label>               
         <input type="text" id="reason"><br />
