--- a/home_page.html
+++ b/home_page.html
@@ -18,9 +18,9 @@
 <nav>
      <ul>
        <li><a href="index.html">Home</a></li>
-       <li><a href="news_page.html">News</a></li>
-       <li><a href="activity_page.html">jobs</a></li>
-       <li><a href="club_shop_page.html">companies</a></li>
+       <li><a href="home.html">News</a></li>
+       <li><a href="news.html">jobs</a></li>
+       <li><a href="jobs.html">companies</a></li>
        <li><a href="sign_up_page.html">log in</a></li>
      </ul> 
   </nav>
