--- a/home_page.html
+++ b/home_page.html
@@ -19,7 +19,7 @@
        <li><a href="home.html">News</a></li>
        <li><a href="news.html">jobs</a></li>
        <li><a href="jobs.html">companies</a></li>
-       <li><a href="sign_up_page.html">log in</a></li>
+       <li><a href="log_in.html">log in</a></li>
      </ul> 
   </nav>
     
