--- a/index.html
+++ b/index.html
@@ -24,5 +24,25 @@
     <h2><b><a href="#contact">!</a></b></h2>
     <p target="color"><span class="a1 "> please enter your hours below .</span></p>
     <p target="span"><span class="a2"> you can record your hours by simply specifying when you started and finished </span> </p>
-</body>
+ <fieldset>                
+      <legend>personal information</legend>
+
+        <label for="name">Name:</label>
+        <input type="text" id="name" required><br />
+
+        <label for="dob">Date of birth (dd/mm/yyyy):</label>               
+        <input type="text" id="dob"><br />
+
+        <label for="hours" id="hoursabel">amount of hours:</label>                    
+        <input type="range" id="hours" value="0"><br />
+
+        <label for="job">job title :</label>               
+        <input type="text" id="job"><br />
+    </fieldset>
+   
+    <input type="submit" value="Sign Up">
+  
+  
+  
+  </body>
 </html>
