--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Delius+Unicase" rel="stylesheet">
   </head>
   <body>
-    <div id="object" class="floating"><img src="http://i.imgur.com/IY8hqoB.jpg" alt="Placeholder logo"height="28"></div><h1>king fisher</h1>
+    <div id="object" class="floating"><img src="http://i.imgur.com/IY8hqoB.jpg" alt="Placeholder logo"height="40"></div><h1>king fisher</h1>
    <nav>
      <ul>
        <li><a href="index.html">Home</a></li>
@@ -40,7 +40,7 @@
         <input type="text" id="job"><br />
     </fieldset>
    
-    <input type="submit" value="Sign Up">
+    <input type="submit" value="record hours">
   
   
   
